1.新增 "會員資料" 功能 2.新增 "修改密碼" 功能

--- a/Vastar/en.lproj/Localizable.strings
+++ b/Vastar/en.lproj/Localizable.strings
@@ -62,3 +62,49 @@
 "SideBar_Menu_Section2_row0_title" = "會員資料";
 "SideBar_Menu_Section2_row1_title" = "修改密碼";
 "SideBar_Menu_Section2_row2_title" = "登出";
+
+"Change_Pw_title" = "修改密碼";
+"Change_Pw_Old_title" = "舊密碼";
+"Change_Pw_New_title" = "新密碼";
+"Change_Pw_Confirm_title" = "確認新密碼";
+"Change_Pw_Verify_Code_title" = "驗證碼";
+"Change_Pw_Verify_Code_Btn_title" = "取得驗證碼";
+"Change_Pw_Confirm_Btn_title" = "確定";
+"Change_Pw_Cancel_Btn_title" = "取消";
+"Change_Pw_Input_Old_Alert_Text" = "尚未輸入舊密碼";
+"Change_Pw_Input_New_Alert_Text" = "尚未輸入新密碼";
+"Change_Pw_Input_Confirm_Pw_Alert_Text" = "尚未輸入確認新密碼";
+"Change_Pw_Input_diff_Alert_Text" = "輸入密碼不同";
+"Change_Pw_Input_Pw_8_Alert_Text" = "密碼至少為8碼";
+"Change_Pw_Update_Success_Alert_Text" = "更新成功";
+
+"Member_title" = "會員資料";
+"Member_Name_title" = "姓名:";
+"Member_Birthday_title" = "生日:";
+"Member_Tel_title" = "市話:";
+"Member_Birthday_Placeholder_title" = "暫無資料，生日僅可修改一次";
+"Member_Birthday_Set_Alert_title" = "將生日設定為";
+"Member_Edit_Btn_title" = "修改";
+"Member_Confirm_Btn_title" = "確定";
+"Member_Cancel_Btn_title" = "取消";
+"Member_Add_Btn_title" = "新增";
+"Member_Select_Btn_title" = "選擇";
+"Member_Set_Date_Btn_title" = "設定日期";
+"Member_Recipient_title" = "收件人資料";
+"Member_Recipient_Btn_title" = "新增收件人";
+"Member_Recipient_Name_title" = "收件人姓名";
+"Member_Recipient_Phone_title" = "收件人電話";
+"Member_Recipient_Adress_title" = "收件地址";
+"Member_Recipient_Adress_City_title" = "選擇縣市";
+"Member_Recipient_Adress_Town_title" = "選擇行政區";
+"Member_Recipient_Adress_Placeholder_title" = "請輸入收件地址";
+"Member_Recipient_Name_Aleart_Text" = "*尚未輸入姓名";
+"Member_Recipient_Phone_Aleart_Text" = "*尚未輸入電話";
+"Member_Recipient_Address_Aleart_Text" = "*尚未輸入地址";
+"Member_Recipient_Delete_Aleart_Text" = "是否確定刪除?";
+
+"Video_title" = "影片首頁";
+"Product_title" = "商品圖片與規格";
+"Shopping_title" = "購物車";
+"Order_title" = "訂單狀態";
+"History_title" = "歷史訂單";
