--- a/Vastar/zh-Hant.lproj/Localizable.strings
+++ b/Vastar/zh-Hant.lproj/Localizable.strings
@@ -43,6 +43,7 @@
 "Forget_Pw_Confirm_title" = "確認新密碼";
 "Forget_Verify_Code_title" = "驗證碼";
 "Forget_Verify_Code_Btn_title" = "取得驗證碼";
+"Forget_Verify_Wait_Btn_title" = "秒後可再次發送";
 "Forget_Confirm_Btn_title" = "確定";
 "Forget_Cancel_Btn_title" = "取消";
 "Forget_Input_Phone_Alert_Text" = "尚未輸入手機";
@@ -50,6 +51,9 @@
 "Forget_Input_Confirm_Pw_Alert_Text" = "尚未輸入確認新密碼";
 "Forget_Input_diff_Alert_Text" = "輸入密碼不同";
 "Forget_Input_Pw_8_Alert_Text" = "密碼至少為8碼";
+"Forget_Input_Phone_10_Alert_Text" = "手機號碼格式有誤";
+"Forget_Input_VeriftyCode_Alert_Text" = "尚未輸入驗證碼";
+"Forget_Input_VeriftyCode_Error_Alert_Text" = "輸入驗證碼錯誤";
 "Forget_Update_Success_Alert_Text" = "更新成功";
 
 "SideBar_Menu_Section1_title" = "訂單";
@@ -76,7 +80,10 @@
 "Change_Pw_Input_Confirm_Pw_Alert_Text" = "尚未輸入確認新密碼";
 "Change_Pw_Input_diff_Alert_Text" = "輸入密碼不同";
 "Change_Pw_Input_Pw_8_Alert_Text" = "密碼至少為8碼";
+"Change_Pw_Input_VeriftyCode_Alert_Text" = "尚未輸入驗證碼";
+"Change_Pw_VeriftyCode_Error_Alert_Text" = "輸入驗證碼錯誤";
 "Change_Pw_Update_Success_Alert_Text" = "更新成功";
+"Change_Pw_Verify_Wait_Btn_title" = "秒後可再次發送";
 
 "Member_title" = "會員資料";
 "Member_Name_title" = "姓名:";
@@ -111,6 +118,9 @@
 "Product_Item4_Btn_title" = "油炸鍋";
 "Product_Item5_Btn_title" = "飛騰女兒鍋";
 "Product_Item6_Btn_title" = "清潔劑";
+
+"Verify_Get_Btn_title" = "取得驗證碼";
+"Verify_Wait_Btn_title" = "秒後可再次發送";
 
 "Video_title" = "影片首頁";
 "Shopping_title" = "購物車";
