1.新增歷史訂單功能頁 2.新增付款方式資料串接 3.修改訂單完成後頁面跳轉問題 4.修改NavigationBar UI 5.修改密碼 驗證碼輸入錯誤 以下方文字顯示警告

--- a/Vastar/en.lproj/Localizable.strings
+++ b/Vastar/en.lproj/Localizable.strings
@@ -165,6 +165,7 @@
 "Order_Create_Done_text" = "訂單已建立！";
 "Order_Later_Pay_Btn_title" = "稍後付款";
 "Order_Now_Pay_Btn_title" = "立即付款";
+"Order_Confirm_title" = "確認訂單";
 
 "Verify_Get_Btn_title" = "取得驗證碼";
 "Verify_Wait_Btn_title" = "秒後可再次發送";
