Fix issue https://ppt.cc/fRN5Tx

--- a/Vastar/zh-Hant.lproj/Localizable.strings
+++ b/Vastar/zh-Hant.lproj/Localizable.strings
@@ -179,7 +179,7 @@
 "Order_Freight_title" = "貨運編號：";
 "Order_Create_Done_text" = "訂單已建立！";
 "Order_Go_Pay_Btn_title" = "前往付款";
-"Order_Later_Pay_Btn_title" = "稍後付款";
+"Order_Later_Pay_Btn_title" = "繼續購物";
 "Order_Now_Pay_Btn_title" = "立即付款";
 "Order_Confirm_title" = "確認訂單";
 "Order_Pay_Done_text" = "訂單已付款";
